[gd_scene load_steps=46 format=3 uid="uid://b11qa1ok58ptg"]

[ext_resource type="Script" path="res://scripts/upgrade_tree_menu.gd" id="1_71stc"]
[ext_resource type="Texture2D" uid="uid://b1a6ulnhl4opq" path="res://assets/HUD/box_background.png" id="1_r3b73"]
[ext_resource type="PackedScene" uid="uid://dsdr7e8rggbmq" path="res://skilltrees/skill_button.tscn" id="1_r7i35"]
[ext_resource type="Script" path="res://scripts/upgrades.gd" id="3_vicqi"]
[ext_resource type="Texture2D" uid="uid://cne0p6wc7y8mo" path="res://assets/HUD/slow_duration_button.png" id="5_1gjmb"]
[ext_resource type="Script" path="res://scripts/select_tree.gd" id="5_gc1tn"]
[ext_resource type="Texture2D" uid="uid://c56i0jfl0cqax" path="res://assets/HUD/advanced_ice_button.png" id="5_vyn5r"]
[ext_resource type="Texture2D" uid="uid://bovf22sa3c53r" path="res://assets/HUD/ice_dps_button.png" id="6_64083"]
[ext_resource type="Texture2D" uid="uid://b7sia56umhi72" path="res://assets/HUD/slow_upgrade_button.png" id="6_up8x5"]
[ext_resource type="Texture2D" uid="uid://dkxwvcwe02cbv" path="res://assets/HUD/dps_button.png" id="7_flwnr"]
[ext_resource type="Texture2D" uid="uid://nwnn6om0o5ks" path="res://assets/HUD/poison_dps_button.png" id="7_t08go"]
[ext_resource type="Texture2D" uid="uid://k01memrpmm8r" path="res://assets/HUD/range_up_button.png" id="8_d16s3"]
[ext_resource type="Texture2D" uid="uid://du68xkcfwd47q" path="res://assets/HUD/double_dps_button.png" id="8_issny"]
[ext_resource type="Texture2D" uid="uid://c3aty6jn0kpm6" path="res://assets/HUD/aoe_button.png" id="8_sj3w4"]
[ext_resource type="Texture2D" uid="uid://csn2fk5likk6m" path="res://assets/HUD/advanced_aoe_button.png" id="9_7hkam"]
[ext_resource type="Texture2D" uid="uid://d342qob5aqwp" path="res://assets/HUD/ice_wave_button.png" id="9_acsv1"]
[ext_resource type="Texture2D" uid="uid://b0q4fhvxpt4xy" path="res://assets/HUD/ice_button.png" id="9_aray4"]
[ext_resource type="Texture2D" uid="uid://bpt3diahbg5fs" path="res://assets/HUD/sniper_button.png" id="10_c5yhu"]
[ext_resource type="Texture2D" uid="uid://nrf6qpl55s75" path="res://assets/HUD/burning_aoe_button.png" id="10_e2x2a"]
[ext_resource type="Texture2D" uid="uid://dmogwmbxb4dic" path="res://assets/HUD/ice_skill_button.png" id="11_mjke5"]
[ext_resource type="Texture2D" uid="uid://bfvd6b5v2g84p" path="res://assets/HUD/plasma_button.png" id="11_n4gpu"]
[ext_resource type="Texture2D" uid="uid://dgtyxft2a526x" path="res://assets/HUD/dps_up_button.png" id="12_vhcv1"]
[ext_resource type="Texture2D" uid="uid://mk1guuydirq2" path="res://assets/HUD/charged_plasma_button.png" id="12_yl8ab"]
[ext_resource type="Texture2D" uid="uid://ddqtk24hylgxv" path="res://assets/HUD/doble_sniper_button.png" id="13_ldtua"]
[ext_resource type="Texture2D" uid="uid://44pnagxon0xf" path="res://assets/HUD/atk_speed_button.png" id="13_va2y6"]
[ext_resource type="Texture2D" uid="uid://bstmpgar1mgv7" path="res://assets/HUD/atk_up_button.png" id="14_xbe4j"]
[ext_resource type="Texture2D" uid="uid://bh0d86m3tv1in" path="res://assets/HUD/weaken_button.png" id="16_u4r87"]
[ext_resource type="Texture2D" uid="uid://df3urue0sm1pk" path="res://assets/HUD/poison_up_button.png" id="17_d3dct"]
[ext_resource type="Texture2D" uid="uid://dyf7ft01iiypk" path="res://assets/HUD/dps_skill_button.png" id="19_fng1c"]
[ext_resource type="Texture2D" uid="uid://cland8q2gflhq" path="res://assets/HUD/def_pen_up_button.png" id="20_npqhk"]
[ext_resource type="Texture2D" uid="uid://c7rn3gm3txgcd" path="res://assets/HUD/sniper_skill_button.png" id="20_ulvpr"]
[ext_resource type="Texture2D" uid="uid://dcxv5ho84u8hv" path="res://assets/HUD/gold_increase_button.png" id="21_lkks6"]
[ext_resource type="Texture2D" uid="uid://dhoe0os7g84ks" path="res://assets/HUD/cursor_button.png" id="21_sglto"]
[ext_resource type="Texture2D" uid="uid://c3c5k0w3legl6" path="res://assets/HUD/arrow_up_button.png" id="22_0qcke"]
[ext_resource type="Texture2D" uid="uid://dcvfl65s7shuc" path="res://assets/HUD/burn_wave_button.png" id="22_fleem"]
[ext_resource type="Texture2D" uid="uid://bkrjajomfvf1s" path="res://assets/HUD/exit_button.png" id="23_5tra0"]
[ext_resource type="Texture2D" uid="uid://cr3egl7oijd21" path="res://assets/HUD/aoe_skill_button.png" id="23_nn83s"]
[ext_resource type="Texture2D" uid="uid://b18vtglngo1ad" path="res://assets/HUD/return_button.png" id="24_o62d0"]
[ext_resource type="Texture2D" uid="uid://c584pwdbcripf" path="res://assets/HUD/burn_up_button.png" id="24_q187o"]
[ext_resource type="Texture2D" uid="uid://cm1u0x7amgh5u" path="res://assets/HUD/box_background_cornerless.png" id="27_6m16o"]
[ext_resource type="Script" path="res://scripts/upgrade_cost.gd" id="28_s4xo1"]
[ext_resource type="Texture2D" uid="uid://byui7ux71fwlt" path="res://assets/HUD/bullet_up_button.png" id="29_pa5a0"]
[ext_resource type="Texture2D" uid="uid://dw55pvs0h0cyj" path="res://assets/HUD/gold.png" id="29_v2fdg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vdlhl"]
texture = ExtResource("1_r3b73")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tqko6"]
texture = ExtResource("1_r3b73")

[node name="UpgradeTree" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vdlhl")
script = ExtResource("1_71stc")

[node name="UpgradeEffects" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_vicqi")

[node name="IceSkills" parent="." groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
visible = false
layout_mode = 1
offset_left = 41.0
offset_top = 280.0
offset_right = -1025.0
offset_bottom = -281.0
texture_normal = ExtResource("5_1gjmb")
effect_id = 12

[node name="UpgradeButton" parent="IceSkills" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 143.0
offset_right = 143.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("6_up8x5")
effect_id = 11

[node name="UpgradeButton" parent="IceSkills/UpgradeButton" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 144.0
offset_top = -200.0
offset_right = 144.0
offset_bottom = -200.0
disabled = true
texture_normal = ExtResource("5_vyn5r")
max_level = 1
effect_id = 13
exclusive = true

[node name="UpgradeButton" parent="IceSkills/UpgradeButton/UpgradeButton" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("8_d16s3")
max_level = 2

[node name="UpgradeButton2" parent="IceSkills/UpgradeButton/UpgradeButton" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("9_acsv1")
effect_id = 14

[node name="UpgradeButton3" parent="IceSkills/UpgradeButton" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 144.0
offset_top = 200.0
offset_right = 144.0
offset_bottom = 200.0
disabled = true
texture_normal = ExtResource("6_64083")
max_level = 1
effect_id = 15
exclusive = true

[node name="UpgradeButton" parent="IceSkills/UpgradeButton/UpgradeButton3" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("11_mjke5")
effect_id = 16

[node name="UpgradeButton2" parent="IceSkills/UpgradeButton/UpgradeButton3" groups=["ice_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("12_vhcv1")
max_level = 2
effect_id = 1

[node name="DpsSkills" parent="." groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
visible = false
layout_mode = 1
offset_left = 41.0
offset_top = 280.0
offset_right = -1025.0
offset_bottom = -281.0
texture_normal = ExtResource("13_va2y6")
effect_id = 3

[node name="UpgradeButton" parent="DpsSkills" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 143.0
offset_right = 143.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("14_xbe4j")
effect_id = 4

[node name="UpgradeButton" parent="DpsSkills/UpgradeButton" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 144.0
offset_top = -200.0
offset_right = 144.0
offset_bottom = -200.0
disabled = true
texture_normal = ExtResource("7_t08go")
max_level = 1
effect_id = 5
exclusive = true

[node name="UpgradeButton" parent="DpsSkills/UpgradeButton/UpgradeButton" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("16_u4r87")
max_level = 2
effect_id = 7

[node name="UpgradeButton2" parent="DpsSkills/UpgradeButton/UpgradeButton" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("17_d3dct")
effect_id = 6

[node name="UpgradeButton3" parent="DpsSkills/UpgradeButton" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 144.0
offset_top = 200.0
offset_right = 144.0
offset_bottom = 200.0
disabled = true
texture_normal = ExtResource("8_issny")
max_level = 1
effect_id = 8
exclusive = true

[node name="UpgradeButton" parent="DpsSkills/UpgradeButton/UpgradeButton3" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("19_fng1c")
effect_id = 9

[node name="UpgradeButton2" parent="DpsSkills/UpgradeButton/UpgradeButton3" groups=["dps_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("20_npqhk")
max_level = 2
effect_id = 10

[node name="AoeSkills" parent="." groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
visible = false
layout_mode = 1
offset_left = 41.0
offset_top = 280.0
offset_right = -1025.0
offset_bottom = -281.0
texture_normal = ExtResource("13_va2y6")
effect_id = 18

[node name="UpgradeButton" parent="AoeSkills" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 143.0
offset_right = 143.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("14_xbe4j")
effect_id = 19

[node name="UpgradeButton" parent="AoeSkills/UpgradeButton" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 144.0
offset_top = -200.0
offset_right = 144.0
offset_bottom = -200.0
disabled = true
texture_normal = ExtResource("9_7hkam")
max_level = 1
effect_id = 20
exclusive = true

[node name="UpgradeButton" parent="AoeSkills/UpgradeButton/UpgradeButton" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("8_d16s3")
max_level = 2
effect_id = 22

[node name="UpgradeButton2" parent="AoeSkills/UpgradeButton/UpgradeButton" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("22_fleem")
effect_id = 21

[node name="UpgradeButton3" parent="AoeSkills/UpgradeButton" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 144.0
offset_top = 200.0
offset_right = 144.0
offset_bottom = 200.0
disabled = true
texture_normal = ExtResource("10_e2x2a")
max_level = 1
effect_id = 23
exclusive = true

[node name="UpgradeButton" parent="AoeSkills/UpgradeButton/UpgradeButton3" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("23_nn83s")
effect_id = 24

[node name="UpgradeButton2" parent="AoeSkills/UpgradeButton/UpgradeButton3" groups=["aoe_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("24_q187o")
max_level = 2
effect_id = 25

[node name="SniperSkills" parent="." groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
visible = false
layout_mode = 1
offset_left = 41.0
offset_top = 280.0
offset_right = -1025.0
offset_bottom = -281.0
texture_normal = ExtResource("20_npqhk")
effect_id = 26

[node name="UpgradeButton" parent="SniperSkills" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 143.0
offset_right = 143.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("14_xbe4j")
effect_id = 27

[node name="UpgradeButton" parent="SniperSkills/UpgradeButton" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 144.0
offset_top = -200.0
offset_right = 144.0
offset_bottom = -200.0
disabled = true
texture_normal = ExtResource("11_n4gpu")
max_level = 1
effect_id = 28
exclusive = true

[node name="UpgradeButton" parent="SniperSkills/UpgradeButton/UpgradeButton" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("13_va2y6")
max_level = 2
effect_id = 30

[node name="UpgradeButton2" parent="SniperSkills/UpgradeButton/UpgradeButton" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("12_yl8ab")
effect_id = 29

[node name="UpgradeButton3" parent="SniperSkills/UpgradeButton" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 144.0
offset_top = 200.0
offset_right = 144.0
offset_bottom = 200.0
disabled = true
texture_normal = ExtResource("13_ldtua")
max_level = 1
effect_id = 31
exclusive = true

[node name="UpgradeButton" parent="SniperSkills/UpgradeButton/UpgradeButton3" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = -56.0
offset_right = 160.0
offset_bottom = -56.0
disabled = true
texture_normal = ExtResource("20_ulvpr")
effect_id = 24

[node name="UpgradeButton2" parent="SniperSkills/UpgradeButton/UpgradeButton3" groups=["sniper_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 56.0
disabled = true
texture_normal = ExtResource("29_pa5a0")
max_level = 2
effect_id = 33

[node name="PlayerSkills" parent="." groups=["player_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
visible = false
layout_mode = 1
offset_left = 64.0
offset_top = 168.0
offset_right = -1002.0
offset_bottom = -393.0
texture_normal = ExtResource("21_lkks6")
max_level = 1
effect_id = 26

[node name="UpgradeButton" parent="PlayerSkills" groups=["player_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 112.0
offset_right = 112.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("21_lkks6")
max_level = 1
effect_id = 27

[node name="UpgradeButton3" parent="PlayerSkills/UpgradeButton" groups=["player_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 112.0
offset_right = 112.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("21_lkks6")
max_level = 1
effect_id = 27

[node name="UpgradeButton2" parent="PlayerSkills/UpgradeButton/UpgradeButton3" groups=["player_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 111.0
offset_right = 111.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("21_lkks6")
max_level = 1
effect_id = 27

[node name="UpgradeButton3" parent="PlayerSkills/UpgradeButton/UpgradeButton3/UpgradeButton2" groups=["player_upgrade_button"] instance=ExtResource("1_r7i35")]
layout_mode = 1
offset_left = 113.0
offset_right = 113.0
offset_bottom = 0.0
disabled = true
texture_normal = ExtResource("21_lkks6")
max_level = 1
effect_id = 27

[node name="PlayerSkills2" parent="." groups=["player_upgrade_button"] instance=ExtResource("1_r7i35")]
process_mode = 3
visible = false
layout_mode = 1
offset_left = 288.0
offset_top = 367.0
offset_right = -778.0
offset_bottom = -194.0
texture_normal = ExtResource("22_0qcke")
max_level = 15436
effect_id = 26

[node name="UpgradeDesc" type="TextEdit" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = 61.0
offset_right = -35.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 2
editable = false
wrap_mode = 1

[node name="Exit" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 30.0
offset_top = 12.0
offset_right = 110.0
offset_bottom = 94.0
mouse_filter = 1
texture_normal = ExtResource("23_5tra0")
stretch_mode = 0

[node name="Return" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 118.0
offset_top = 12.0
offset_right = 198.0
offset_bottom = 94.0
mouse_filter = 1
texture_normal = ExtResource("24_o62d0")
stretch_mode = 0

[node name="Select Tree" type="Panel" parent="."]
process_mode = 3
visible = false
visibility_layer = 16384
z_index = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tqko6")
script = ExtResource("5_gc1tn")

[node name="Exit" type="TextureButton" parent="Select Tree"]
process_mode = 3
visibility_layer = 16384
z_index = 4
layout_mode = 0
offset_left = 30.0
offset_top = 12.0
offset_right = 110.0
offset_bottom = 94.0
mouse_filter = 1
texture_normal = ExtResource("23_5tra0")
stretch_mode = 0

[node name="PlayerTreeButton" type="TextureButton" parent="Select Tree"]
process_mode = 3
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 512.0
offset_top = 110.0
offset_right = -512.0
offset_bottom = -410.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("21_sglto")
stretch_mode = 0

[node name="DpsTreeButton" type="TextureButton" parent="Select Tree"]
process_mode = 3
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 264.0
offset_top = 269.0
offset_right = -760.0
offset_bottom = -251.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_flwnr")
stretch_mode = 0

[node name="AoeTreeButton" type="TextureButton" parent="Select Tree"]
process_mode = 3
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 269.0
offset_right = -264.0
offset_bottom = -251.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_sj3w4")
stretch_mode = 0

[node name="IceTreeButton" type="TextureButton" parent="Select Tree"]
process_mode = 3
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 494.0
offset_right = -640.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("9_aray4")
stretch_mode = 0

[node name="SniperTreeButton" type="TextureButton" parent="Select Tree"]
process_mode = 3
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 494.0
offset_right = -384.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_c5yhu")
stretch_mode = 0

[node name="RichTextLabel" type="Label" parent="Select Tree"]
process_mode = 3
layout_mode = 0
offset_left = 312.0
offset_top = 40.0
offset_right = 832.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 46
text = "Skill Tree Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldContainer" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
layout_mode = 0
offset_left = 640.0
offset_top = 520.0
offset_right = 768.0
offset_bottom = 585.0
texture = ExtResource("27_6m16o")

[node name="Upgrade_cost" type="Label" parent="GoldContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_right = -7.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("28_s4xo1")

[node name="TextureRect" type="TextureRect" parent="GoldContainer"]
layout_mode = 0
offset_left = 8.0
offset_top = 12.0
offset_right = 48.0
offset_bottom = 52.0
texture = ExtResource("29_v2fdg")

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Select Tree/Exit" to="Select Tree" method="_on_exit_pressed"]
[connection signal="pressed" from="Select Tree/PlayerTreeButton" to="Select Tree" method="_on_player_tree_button_pressed"]
[connection signal="pressed" from="Select Tree/DpsTreeButton" to="Select Tree" method="_on_dps_tree_button_pressed"]
[connection signal="pressed" from="Select Tree/AoeTreeButton" to="Select Tree" method="_on_aoe_tree_button_pressed"]
[connection signal="pressed" from="Select Tree/IceTreeButton" to="Select Tree" method="_on_ice_tree_button_pressed"]
[connection signal="pressed" from="Select Tree/SniperTreeButton" to="Select Tree" method="_on_sniper_tree_button_pressed"]
